<resources>
    <string name="app_name">Breathe4School</string>
    <string name="registration">Registration</string>
    <string name="unique_id">Unique ID</string>
    <string name="continue_txt">Continue</string>
    <string name="already_register"><font fgcolor='##000A11'>Already Registered?</font><b> <font fgcolor='##000A11'>Login</font></b></string>
    <string name="email_id">Email Id</string>
    <string name="verify_now">Verify Now</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="time_out">Time out!</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="proceed_txt">Proceed</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="minimum_8_characters">\u2022 minimum 8 characters</string>
    <string name="one_uppercase_character">\u2022 one uppercase character</string>
    <string name="one_special_character">\u2022 one special character</string>
    <string name="one_lowercase_character">\u2022 one lowercase character</string>
    <string name="one_number">\u2022 one number</string>
    <string name="set_face_id">Set Face ID</string>
    <string name="face_id">Face ID</string>
    <string name="set_4_digit_m_pin">Set 4 Digit M-PIN</string>
    <string name="new_pin">New Pin</string>
    <string name="confrim_pin">Confrim Pin</string>
    <string name="hello_john_deo">Hello! John deo</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_m_pin_password">Forgot M-PIN / Password?</string>
    <string name="login_with_temp_password">Login with temp password</string>
    <string name="welcome_john_deo">Welcome John deo</string>
    <string name="otp_sent_to_johndeo_xploresense_com">OTP sent to Johndeo@xploresense.com</string>
    <string name="unlock_with_m_pin">Unlock with M-PIN</string>
    <string name="login">Login</string>
    <string name="forgot_m_pin">Forgot M-PIN?</string>
    <string name="login_with_password_instead">Login with password instead</string>
    <string name="login_with_mpin_instead">Login with M-Pin instead</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="your_temp_password_request_no">Your temp password request no</string>
    <string name="enter_temp_m_pin">Enter temp M-PIN</string>
    <string name="unlock_with_temp_m_pin">Unlock with temp M-PIN</string>
    <string name="skip_and_get_started">Skip and Get started</string>
    <string name="invalid_otp">Invalid OTP entered</string>
    <string name="enter_mail_id">Enter email Id</string>
    <string name="enter_mobile_no">Enter mobile number</string>
    <string name="resend_time_format">%02d:%02d</string>
    <string name="password_mismatch">Password Missmatch</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_otp_enter">Invalid OTP entered</string>
    <string name="invalid_temp_pin">Invalid Temp Pin</string>
    <string name="edit_study_planer">Edit Study Planer</string>


    <string name="test_num">1234</string>

    <string name="skip_face_id">SkipFaceId</string>
    <string name="otp_header">OTP send to</string>
    <string name="miss_match_mpin">MPin MisMatch</string>
    <string name="no_internet">Please Check Internet Connection</string>
    <string name="login_flow">login</string>
    <string name="regist">register</string>
    <string name="my_feed">My Feed</string>
    <string name="calendar">Calendar</string>
    <string name="upcoming_classes">Upcoming Classes</string>
    <string name="mr_john_doe">Mr. John Doe</string>
    <string name="join_now">Join now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notice_board">Notice Board</string>
    <string name="gender">Gender</string>
    <string name="school_email_id">School Email Id</string>
    <string name="contact_number">Contact Number</string>
    <string name="mdm_id_imei">MDM ID / IMEI</string>
    <string name="division">Division</string>
    <string name="dob">DOB</string>
    <string name="parents_email_id">Parents email id</string>
    <string name="mother_name">Mother name</string>
    <string name="alternative_number">Alternative number</string>
    <string name="class_teacher">Class teacher</string>
    <string name="Class">Class</string>
    <string name="live_session">Live Session</string>
    <string name="hindi">hindi</string>
    <string name="my_text"><u>Reminder ON</u></string>
    <string name="edit_plan"><u>Edit Planer</u></string>
    <string name="sanskrit">Sanskrit</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="homework">HomeWork</string>
    <string name="pre_read">Pre-read</string>
    <string name="activity">Activity</string>
    <string name="home_work_management">Home Work Management</string>
    <string name="subject_wise_home_work">Subject wise Home Work</string>
    <string name="this_question">This Question</string>
    <string name="total_marks">Total Marks</string>
    <string name="questions">Questions</string>
    <string name="upload_your_files_here">Upload your files here</string>
    <string name="open_camera">Open Camera</string>
    <string name="choose_file">Choose file</string>
    <string name="you_have_successfully_submitted_the_homework">You Have successfully submitted the homework</string>
    <string name="maths">Maths</string>
    <string name="create_study_plan">Create Study Planner</string>
    <string name="study_planner_name">Study planner name</string>
    <string name="complete_chapter"><![CDATA[Complete Chapter 1 & 2]]></string>
    <string name="create">Create</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="result">Result</string>
    <string name="english">English</string>
    <string name="science">Science</string>
    <string name="social_science">Social Science</string>
    <string name="time">TIME</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="this_month">This Month</string>
    <string name="pick_a_date">PICK A DATE</string>
    <string name="instructions">Instructions</string>
    <string name="example">Example</string>
    <string name="on_review">On Review</string>
    <string name="my_answer">My answer</string>
    <string name="remark">Remark</string>
    <string name="Mark">Mark</string>
    <string name="completed">Completed</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard_chagnges">Discard Chagnges</string>
    <string name="preview">Preview</string>
    <string-array name="workinghour">
        <item>All</item>
        <item>Live Sessions</item>
        <item>Study Planner</item>

    </string-array>
    <string-array name="types">
        <item>Select Type</item>
        <item>Once</item>
        <item>Everyday</item>
    </string-array>
    <string-array name="star_timings">
        <item>Start time</item>
        <item>07:00 AM</item>
        <item>08:00 AM</item>
        <item>09:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>01:00 PM</item>
        <item>02:00 PM</item>
        <item>03:00 PM</item>
        <item>04:00 PM</item>
        <item>05:00 PM</item>
    </string-array>
    <string-array name="end_timings">
        <item>End time</item>
        <item>07:00 AM</item>
        <item>08:00 AM</item>
        <item>09:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>01:00 PM</item>
        <item>02:00 PM</item>
        <item>03:00 PM</item>
        <item>04:00 PM</item>
        <item>05:00 PM</item>
    </string-array>


    <string name="summary">Summary</string>
    <string name="live">LIVE</string>
    <string name="assessment">Assessment</string>
    <string name="today_digitla">Today(12)</string>
    <string name="previous">Previous(16)</string>
    <string name="view_all">View all</string>
    <string name="total_summery">Today Summary</string>
    <string name="lesson">1st Lesson</string>
    <string name="three_pm">3:30 PM</string>
    <string name="lesson_description">Lesson Description</string>
    <string name="relevent_link_ref">Relevant links / references</string>
    <string name="sample_text">Today we’re going to cover Chapter 1 with in-depth understanding and you can clear your doubts in the end of the class.</string>
    <string name="digital_text"> Ao contrário da crença popular, o Lorem Ipsum não é simplesmente texto aleatório</string>
    <string name="view"><u>View</u></string>
    <string name="your_polls">Your Polls</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text.</string>
    <string name="polls">Polls 01</string>
    <string name="polls_two">Polls 02</string>
    <string name="your_activity">Your Activity</string>
    <string name="your_assessment">Your Assessment</string>
    <string name="take_assessment">Take Assessment</string>
    <string name="digital_class_management">Digital Class Management</string>
    <string name="ms.jasmin">Ms. Jasmine</string>
    <string name="presentation">Presentation</string>
    <string name="view_summary">View Summary</string>
    <string name="select_any_option">Please select any OPTION</string>
    <string name="lunch">Lunch</string>
    <string name="dead_line">DeadLine</string>
    <string name="not_started_with_dot">\Not started •\u0020\</string>
    <string name="onreview_with_dot">\On review •\u0020\</string>
    <string name="completed_with_dot">\Completed •\u0020\</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="list_of_holidays">List of holidays</string>
    <string name="pending">Pending</string>


</resources>
