<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_union"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvFilterclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:drawableStart="@drawable/ic_filter"
        android:drawablePadding="@dimen/_5sdp"
        android:drawableTint="@color/primary"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingTop="@dimen/_4sdp"
        android:paddingBottom="@dimen/_2sdp"
        android:text="Filter"
        android:textColor="@color/primary"
        android:textSize="@dimen/_6sdp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFilterclose"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/subject"
                android:textColor="@color/black"
                android:textSize="@dimen/_4sdp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:layout_marginRight="-5dp"
                android:checked="true"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/english"
                android:textSize="@dimen/_4sdp" />

            <CheckBox
                android:id="@+id/cbMaths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-14dp"
                android:layout_marginRight="-5dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/maths"
                android:textSize="@dimen/_4sdp" />

            <CheckBox
                android:id="@+id/cbScience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-14dp"
                android:layout_marginRight="-5dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/science"
                android:textSize="@dimen/_4sdp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-14dp"
                android:layout_marginRight="-5dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/social_science"
                android:textSize="@dimen/_4sdp"
                android:visibility="gone" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-14dp"
                android:layout_marginRight="-5dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/sanskrit"
                android:textSize="@dimen/_4sdp"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/cbHindi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-14dp"
                android:layout_marginRight="-5dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:scaleX="0.70"
                android:scaleY="0.70"
                android:text="@string/hindi"
                android:textSize="@dimen/_4sdp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"

            android:orientation="vertical">


            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="@dimen/_4sdp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:orientation="horizontal">


                <RelativeLayout
                    android:id="@+id/rlToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/corner_stroke_primary"
                    android:padding="@dimen/_2sdp">


                    <TextView
                        android:id="@+id/tvToday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:text="@string/today"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_4sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlYesterday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/corner_stroke_primary"
                    android:padding="@dimen/_2sdp"

                    >


                    <TextView
                        android:id="@+id/tvYesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:text="@string/yesterday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_4sdp" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:orientation="horizontal">


                <RelativeLayout
                    android:id="@+id/rl_thisWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/corner_stroke_primary"
                    android:padding="@dimen/_2sdp">


                    <TextView
                        android:id="@+id/tvThisWeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:text="@string/this_week"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_4sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlLastWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/corner_stroke_primary"
                    android:padding="@dimen/_2sdp">


                    <TextView
                        android:id="@+id/tvLastWeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:text="@string/last_week"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_4sdp" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:orientation="horizontal">


                <RelativeLayout
                    android:id="@+id/rlThisMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/corner_stroke_primary"
                    android:padding="@dimen/_2sdp">


                    <TextView
                        android:id="@+id/tvThisMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:text="@string/this_month"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_4sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlLastMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/corner_stroke_primary"
                    android:padding="@dimen/_2sdp"

                    >


                    <TextView
                        android:id="@+id/tvLastMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:text="@string/last_month"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_4sdp" />

                </RelativeLayout>


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/pick_a_date"
                android:textColor="@color/black"
                android:textSize="@dimen/_4sdp"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@drawable/corner_stroke_primary"
                android:padding="@dimen/_2sdp">


                <TextView
                    android:id="@+id/datePiker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_calendar"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/primary"
                    android:gravity="center"
                    android:text="17/02/2022"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_4sdp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:orientation="horizontal">


                <RelativeLayout
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/corner_stroke_primary"
                    android:padding="@dimen/_2sdp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_4sdp"
                        android:text="@string/clear"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_4sdp" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/apply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/corner_stroke_primary"
                    android:backgroundTint="@color/primary"
                    android:padding="@dimen/_2sdp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_4sdp"
                        android:text="@string/apply"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_4sdp" />


                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>