<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Register.SetPasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:rotationX="360"
            android:scaleType="fitXY"
            android:src="@drawable/register_image" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageButton
                android:id="@+id/ibBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back_arrow"
                android:layout_margin="@dimen/_10sdp"

                />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"

            >

            <ImageView
                android:id="@+id/ivlogo"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_5sdp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/semibold"
                android:text="@string/set_password"
                android:textColor="@color/black_text"
                android:textSize="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_5sdp"/>








            <com.google.android.material.textfield.TextInputLayout
                app:boxStrokeErrorColor="@color/red"
                android:id="@+id/edSetPasswordInp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/_100sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:hint="@string/set_password"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edSetPasswordId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/ic_info"
                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                app:boxStrokeErrorColor="@color/red"
                android:id="@+id/edConfirmPasswordInp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/_100sdp"
                android:hint="@string/confirm_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edConfirmPasswordId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"

                    >

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_100sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:text="@string/show_password"
                android:drawableStart="@drawable/ic_password_eye"
                android:drawablePadding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"

                />


            <LinearLayout
                android:id="@+id/llinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_100sdp"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/_4sdp"

                >


                <TextView
                    android:id="@+id/charcount"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minimum_8_characters"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="sans-serif"
                    />

                <TextView
                    android:id="@+id/AtoZ"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_uppercase_character"
                    android:textSize="@dimen/_10sdp"
                    />



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_100sdp"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/_4sdp"
                >


                <TextView
                    android:id="@+id/special_char"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_special_character"
                    android:textSize="@dimen/_10sdp"
                    />

                <TextView
                    android:id="@+id/atoz"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_lowercase_character"
                    android:textSize="@dimen/_10sdp"
                    />



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_100sdp"
                android:weightSum="2"

                >


                <TextView
                    android:id="@+id/num"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_number"
                    android:textSize="@dimen/_10sdp"
                    />

                <TextView
                    android:visibility="invisible"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_8sdp"
                    />



            </LinearLayout>


            </LinearLayout>








            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnProceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:enabled="false"
                android:fontFamily="@font/semibold"
                android:padding="@dimen/_8sdp"
                android:text="@string/continue_txt"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>


        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>